--- a/weather/weather.css
+++ b/weather/weather.css
@@ -1,6 +1,5 @@
-
-h2{
-    color: aliceblue;
+h1{
+    color: white;
 }
 body{
     background: url(background.png);
@@ -20,27 +19,38 @@ body{
 #input{
     font-size: 20px;
     padding: 5px 10px;
-    background: aliceblue;
+    background: rgb(252, 253, 254);
     border-radius: 30px; /*rounding its corner*/
+    align-items: center;
+    margin-right: 10px;
 }
-#Search{
+#search{
     background: cadetblue;
     padding: 5px 10px;
     font-size: 18px;
     border-radius: 40px;
     border: #faf9f9;
+    text-align: center;
 }
-.Weather{
+
+.search-container {
+    display: flex;
+    justify-content: flex-end;
+    padding: auto;
+    margin-top: auto;
+}
+.weather{
     text-align: center;
     color: aliceblue;
 }
-#City{
+#city{
     font-size: 30px;
+    text-align: center;
 }
 .temprature-box{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; /*putting the content in middle*/
     margin: 30px 0px;
 }
 #temperature{
@@ -48,6 +58,7 @@ body{
     font-size: 50px;
     margin: 20px;
     margin-right: 10px;
+    color: wheat;
 }
 #logo {
     width: 90px; 
@@ -61,3 +72,48 @@ body{
     padding: 10px 20px;
     border-radius: 40px;
 }
+.forecast {
+    margin: 50px 0px;
+    text-align: center;
+    
+}
+  
+.forecast-header {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: white;
+  }
+  
+.templist {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+.next {
+    background: rgba(255, 255, 255, 0.7);
+    width: 150px;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 3px 3px 10px rgba(75, 74, 74, 0.2);
+    text-align: center;
+  }
+  
+.next p {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+  
+.next .time {
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  
+.next .desc {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+  
